syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc_coffee";
option java_outer_classname = "CoffeeMachineProto";

import "google/protobuf/timestamp.proto";

package coffeemachine;

service CoffeeMachine {
    rpc Ping (PingRequest) returns (PingResponse) {}
    rpc GetProduct (ProduceProductRequest) returns (ProduceProductResponse) {}
    rpc GetHistory (GetHistoryRequest) returns (stream GetHistoryResponse) {}
}

message PingRequest {
}

message PingResponse {
    bool alive = 1;
    string message = 2;
}

enum Product {
    CAPPUCCINO = 0;
    LATTE_MACCHIATO = 1;
    COFFEE = 2;
    HOT_WATER = 3;
    MILK = 4;
}

message ProduceProductRequest {
    Product product = 1;
}

message ProduceProductResponse {
    Product product = 1;
}

message GetHistoryRequest {
}

message GetHistoryResponse {
    Product product = 1;
    google.protobuf.Timestamp created_at = 2;
}
